# work-journal-cli

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
2023-10/: 2023-10-20-journal.md
work_journal/: cli.py  config.ini  config.py  create.py  run.py  setter.py  setup.py
work_journal_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
